# media-downloader

./: .gitignore  Cargo.toml  Dockerfile  package.json  pnpm-lock.yaml  rustfmt.toml
.cargo/: config.toml
crates/configuration/: Cargo.toml
crates/configuration/src/: lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: error.rs  lib.rs  main.rs  state.rs
crates/gateway/src/controllers/: channel.rs  downloads.rs  media.rs  mod.rs  tv_shows.rs
crates/gateway/src/extracts/: json_body.rs  mod.rs  rpc_client.rs
crates/gateway/src/middlewares/: logging.rs  mod.rs  revision.rs
crates/models/: Cargo.toml  README.md
crates/models/migrations/2024-05-28-020342_init/: down.sql  up.sql
crates/models/src/: error.rs  lib.rs
crates/models/src/models/: download_records.rs  mod.rs  users.rs
crates/protocol/: Cargo.toml  build.rs
crates/protocol/proto/: projects.proto  users.proto
crates/protocol/src/: channel.rs  common.rs  lib.rs  media.rs
crates/protocol/src/common/: download_progress.rs
crates/protocol/src/pb/: channel.Channel.rs  downloader.Downloader.rs  media.Media.rs
crates/rpc-client/: Cargo.toml
crates/rpc-client/src/: lib.rs
crates/services/aggregation/: Cargo.toml
crates/services/aggregation/src/: lib.rs
crates/services/channel/: Cargo.toml
crates/services/channel/src/: common.rs  lib.rs
crates/services/channel/src/common/: download_media.rs  download_video.rs  fs.rs  selector.rs
crates/services/channel/src/services/: mod.rs  unified.rs  xiaobao.rs  xiaobao.rsx
crates/services/channel/src/services/unified/: api.rs
crates/services/media/: Cargo.toml
crates/services/media/src/: lib.rs  utils.rs
crates/stream/: Cargo.toml
crates/stream/src/: lib.rs
crates/task-manager/: Cargo.toml
crates/task-manager/src/: lib.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: actions.rs  api.rs  app.rs  component.rs  components.rs  lib.rs  main.rs  state.rs  terminal.rs  views.rs
crates/terminal/src/components/: help_panel.rs
crates/terminal/src/layouts/: status_bar.rs
crates/terminal/src/views/: dashboard.rs  search.rs
crates/terminal/src/views/search/: actions.rs  completed.rs  search_input.rs
crates/testing/: Cargo.toml
crates/testing/src/: lib.rs  protocol.rs  request.rs
docs/: 01-overview.md  02-task-manager-crate.md  03-backend-wiring.md  04-rest-sse-endpoints.md  05-media-service-tracking.md  06-frontend-implementation.md
scripts/: entrypoint.sh
tests/integration-tests/: Cargo.toml
tests/integration-tests/src/: gateway.rs  media.rs  tests.rs  tv_shows.rs
tests/integration-tests/src/common/: mod.rs
