[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal dependencies
configuration = { workspace = true }
aggregation = { workspace = true }
protocol = { workspace = true }
models = { workspace = true }
rpc-client = { workspace = true }

# External dependencies
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
anyhow = { workspace = true }
axum = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }
http-body-util = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["time", "chrono"] }
