[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bytes = { workspace = true }
tokio-stream = { workspace = true }
models = { workspace = true }

[build-dependencies]
proto = { workspace = true }
tonic-build = { workspace = true }
