[package]
name = "channel"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal dependencies
protocol = { workspace = true }
configuration = { workspace = true }
stream = { workspace = true }

# External dependencies
async-trait = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
http = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
regex = { workspace = true }
m3u8-rs = { workspace = true }
url = { workspace = true }
log = { workspace = true }
tokio-stream = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
